--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <center>
                 <h2 id="About">About Me</h2>
                 <div class="intro-text">
-                    <p>Hello! My name is Alison, and I'm a third year student at UC Berkeley studying computer science. 
+                    <p>Hello! My name is Alison, and I'm a third year at UC Berkeley studying computer science. 
                         As both an artist and programmer, I'm passionate about the intersection of technology and design and am committed to exploring this through my work.
                         My current interests include computational photography, computer graphics, and web design & development. 
                         In addition, I am also enthusiastic about ethics and the social implications of computer technology.
@@ -59,7 +59,7 @@
 
             <div class="skill-row">
                 <div class="skill-column">
-            <h3>Programming Languages</h3>
+            <h3><span>Programming Languages</span></h3>
 
             <div id="stars">
                 <div class="row">
@@ -94,7 +94,7 @@
             <br>
 
             <div class="skill-column">
-            <h3>Design Software - Adobe</h3>
+            <h3><span>Design Software - Adobe</span></h3>
 
             <div id="stars">
                 <div class="row">
