--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 </div>
                 
                 <h1><b>I'm Alison Siebert</b></h1>
-                <p id="desc">Computer Science @ UC Berkeley</p>
                 <p id="desc">Developer, Designer, and Student</p>
+                <p id="desc">Computer Science @ UC Berkeley</p>
                 
                 <div class="sidexside">
-                    <img src="assets/images/email.png" alt="" width="70">
-                    <img src="assets/images/g.png" alt="" width="70">
-                    <img src="assets/images/linkedin.png" alt="" width="70">
+                    <a href=""><img src="assets/images/email.png" alt="" width="70" class="button"></a>
+                    <a href="https://github.com/asieb18"><img src="assets/images/g.png" alt="" width="70" class="button"></a>
+                    <a href="http://linkedin.com/in/alison-siebert"><img src="assets/images/linkedin.png" alt="" width="70" class="button"></a>
                 </div>
             </div>
             <div class="home-img">
