--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--NAVIGATION BAR-->
     <div class="navbar">
-        <a href="index.html">Alison Siebert</a>
+        <a href="index.html" id="name">Alison Siebert</a>
         <div class="nav-right">
             <a href="index.html" id="curr-page">Home</a>
             <a href="#About">About</a>
@@ -36,7 +36,7 @@
                 <p id="desc">Computer Science @ UC Berkeley</p>
                 
                 <div class="sidexside">
-                    <a href=""><img src="assets/images/email.png" alt="" width="70" class="button"></a>
+                    <a href="mailto:alisonsiebert@berkeley.edu"><img src="assets/images/email.png" alt="" width="70" class="button"></a>
                     <a href="https://github.com/asieb18"><img src="assets/images/g.png" alt="" width="70" class="button"></a>
                     <a href="http://linkedin.com/in/alison-siebert"><img src="assets/images/linkedin.png" alt="" width="70" class="button"></a>
                 </div>
@@ -63,7 +63,7 @@
                         <p>Hello! My name is Alison, and I'm a third year at UC Berkeley studying computer science. 
                             As both an artist and programmer, I'm passionate about the intersection of technology and design and am committed to exploring this through my work.
                             My current interests include computational photography, computer graphics, and web design & development. 
-                            In addition, I am also enthusiastic about ethics and the social implications of computer technology.
+                            I am also enthusiastic about ethics and the social implications of computer technology.
                         </p>
                     </div>
                     <div class="container">
@@ -167,7 +167,7 @@
                     </div>
                     <div class="proj-column">
                         <img src="assets/images/fill-later.png" alt="" width="300">
-                        <figcaption><a href="asieb18.github.io/photography">Photography Portfolio Site</a></figcaption>
+                        <figcaption><a href="https://asieb18.github.io/photography">Photography Portfolio Site</a></figcaption>
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
 
             <p>Email: alisonsiebert@berkeley.edu</p>
             <a href="https://github.com/asieb18">github</a>
-            <a href="https://www.linkedin.com/in/alison-siebert-79103a23a/">linkedin</a>
+            <a href="https://www.linkedin.com/in/alison-siebert/">linkedin</a>
             <a href="#">resume</a>    
             <br>
         </center>
