forgot to add changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--NAVIGATION BAR-->
     <div class="navbar">
-        <a href="index.html" id="name">Alison Siebert</a>
+        <!--<a href="index.html" id="name">Alison Siebert</a>-->
         <div class="nav-right">
             <a href="index.html" id="curr-page">Home</a>
             <a href="#About">About</a>
