Updated About me

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <img src="assets/images/star-medium.png" alt="" width="40px">
 
                         <p>Hello! My name is Alison, and I'm a third year at UC Berkeley studying computer science. 
-                            As both an artist and programmer, I'm passionate about the intersection of technology and design and am committed to exploring this through my work.
+                            As both an artist and programmer, I'm passionate about the intersection of technology and design.
                             My current interests include computational photography, computer graphics, and web design & development. 
                             I am also enthusiastic about ethics and the social implications of computer technology.
                         </p>
@@ -87,9 +87,9 @@
                         <img src="assets/images/star-medium.png" alt="" width="40px">
 
                         <p>
-                            As a hobby, I enjoy learning how to create art in different mediums, such as graphic design, photography, sculpture, and crochet.
-                            Aside from creating, I love exploring new environments and experiences. 
-                            Whether traveling, visiting art museums, or hiking, I'm constantly seeking out new sources of inspiration.
+                            As a hobby, I enjoy learning how to create art in different mediums, including graphic design, photography, video editing, and crochet.
+                            Aside from creating, I'm constantly searching for new sources of inspiration.
+                            I love visiting art museums, hiking, and discovering new cafes.
                         </p>
                     </div>
                     <br>
