Updated Design and About Me

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="navbar">
         <div class="nav-left">
-            <a href="index.html">Alison Siebert</a>
+            <img src="assets/images/faviconc.png" alt="" width="40px">
         </div>
         <div class="nav-right">
             <a href="index.html">Home</a>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="assets/images/campanile.jfif" alt="" width="700px" id="sather">
+                <img src="assets/images/portrait.png" alt="" width="480px" id="sather">
             </div>
         </div>
 
@@ -72,25 +72,28 @@
             <!--ABOUT ME: INTRODUCTION-->
             <center>
                 <h2>About Me</h2></center>
+                
+                <div class="container">
+                    <img src="assets/images/aboutme.png" width="350px">
+                    <div class="intro-text">
+                        <div class="container">
+                            <img src="assets/images/star-medium.png" alt="" width="40px">
 
-                <div class="intro-text">
-                    <div class="container">
-                        <img src="assets/images/star-medium.png" alt="" width="40px">
+                            <p>Hello, my name is Alison. I'm a UC Berkeley alumni with a Bachelor's degree in computer science. 
+                                As both an artist and programmer, I'm passionate about the intersection of technology and design.
+                                My main interests include computational photography, computer graphics, and web design and development. 
+                                I am also enthusiastic about ethics and the social implications of computer technology.
+                            </p>
+                        </div>
+                        <div class="container">
+                            <img src="assets/images/star-medium.png" alt="" width="40px">
 
-                        <p>Hello! My name is Alison, and I'm a third year at UC Berkeley studying computer science. 
-                            As both an artist and programmer, I'm passionate about the intersection of technology and design.
-                            My current interests include computational photography, computer graphics, and web design & development. 
-                            I am also enthusiastic about ethics and the social implications of computer technology.
-                        </p>
-                    </div>
-                    <div class="container">
-                        <img src="assets/images/star-medium.png" alt="" width="40px">
-
-                        <p>
-                            As a hobby, I enjoy learning how to create art in different mediums, including graphic design, photography, video editing, and crochet.
-                            Aside from creating, I'm constantly searching for new sources of inspiration.
-                            I love visiting art museums, hiking, and discovering new cafes.
-                        </p>
+                            <p>
+                                As a hobby, I enjoy learning how to create art in different mediums, including graphic design, photography, video editing, and crochet.
+                                Aside from creating, I'm constantly searching for new sources of inspiration.
+                                I love visiting art museums, hiking, and discovering new cafes.
+                            </p>
+                        </div>
                     </div>
                     <br>
                 </div>
