centered + added projects

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="home-img">
-                <img src="assets/images/portrait.png" alt="" width="480px" id="sather">
+                <img src="assets/images/portrait.png" alt="" width="480px">
             </div>
         </div>
 
@@ -142,7 +142,7 @@
             <br>
 
             <div class="skill-column">
-            <h3><span>Adobe</span></h3>
+            <h3><span>Adobe Creative Cloud</span></h3>
 
             <div id="stars">
                 <div class="row">
@@ -180,12 +180,12 @@
             <div class="projectflex">
                 <div class="row">
                     <div class="proj-column">
-                        <img src="assets/images/fill-later.jpg" alt="" width="300">
-                        <figcaption><a href="https://inst.eecs.berkeley.edu/~cs194-26/fa22/upload/files/proj1/cs194-26-agt/"><h3><span>Colorizing Images</span></h3></a></figcaption>
+                        <img src="assets/images/jk.png" alt="" width="300">
+                        <figcaption><a href="https://asieb18.github.io/Face-Morphing"><p><span>CS 194-26: Face Morphing</span></p></a></figcaption>
                     </div>
                     <div class="proj-column">
                         <img src="assets/images/fill-later.jpg" alt="" width="300">
-                        <figcaption><a href="https://inst.eecs.berkeley.edu/~cs194-26/fa22/upload/files/proj2/cs194-26-agt/"><h3><span>Filters and Frequencies</span></h3></a></figcaption>
+                        <figcaption><a href="https://asieb18.github.io/194-26-Project-1/"><h3><span>Filters and Frequencies</span></h3></a></figcaption>
                     </div>
                     <div class="proj-column">
                         <img src="assets/images/fill-later.png" alt="" width="300">
