unified imgs + hover links

--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
             <h2 id="Projects">Highlighted Projects</h2>
 
             <div class="projectflex">
-                <div class="row">
+                <div class="row" id="proj">
                     <div class="proj-column">
                         <figure>
-                            <img src="assets/images/jk.png" alt="" width="300">
+                            <a href="https://asieb18.github.io/Face-Morphing"><img src="assets/images/jk.png" alt="" width="300"></a>
                             <figcaption><a href="https://asieb18.github.io/Face-Morphing"><p>Face Morphing</p></a></figcaption>
                         </figure>
                     </div>
                     <div class="proj-column">
                         <figure>
-                            <img src="assets/images/photography.png" alt="" width="300">
+                            <a href="https://asieb18.github.io/photography/"><img src="assets/images/photography.png" alt="" width="300"></a>
                             <figcaption><a href="https://asieb18.github.io/photography/"><p>Photography Portfolio Site</p></a></figcaption>
                         </figure>
                     </div>
@@ -204,31 +204,31 @@
                     </div>-->
                 </div>
                 
-                <div class="row">
+                <div class="row" id="proj">
                     <div class="proj-column">
                         <figure>
-                            <img src="assets/images/keeb.png" alt="" width="300">
-                            <figcaption><a href="https://asieb18.github.io/keyboard"><p>Mechanical Keyboard Site</p></a></figcaption>
+                            <a href="https://asieb18.github.io/keyboard"><img src="assets/images/keeb.png" alt="" width="300"></a>
+                            <figcaption><a href="https://asieb18.github.io/keyboard"><p>Mechanical Keyboard</p></a></figcaption>
                         </figure>
                     </div>
                     <div class="proj-column">
                         <figure>
-                            <img src="assets/images/game.png" alt="" width="300">
-                            <figcaption><a href="https://asieb18.github.io/photography/"><p>BYOW: Build Your Own World</p></a></figcaption>
+                            <a href="https://asieb18.github.io//"><img src="assets/images/game.png" alt="" width="300"></a>
+                            <figcaption><a href="https://asieb18.github.io//"><p>BYOW: Build Your Own World</p></a></figcaption>
                         </figure>
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row" id="proj">
                     <div class="proj-column">
                         <figure>
-                            <img src="assets/images/filters.png" alt="" width="300">
+                            <a href="https://asieb18.github.io/Face-Morphing"><img src="assets/images/filters.png" alt="" width="300"></a>
                             <figcaption><a href="https://asieb18.github.io/Face-Morphing"><p>Filters and Frequencies</p></a></figcaption>
                         </figure>
                     </div>
                     <div class="proj-column">
                         <figure>
-                            <img src="assets/images/mosaic.png" alt="" width="300">
+                            <a href="https://asieb18.github.io/Image-Warping-and-Mosaicing/"><img src="assets/images/mosaic.png" alt="" width="300"></a>
                             <figcaption><a href="https://asieb18.github.io/Image-Warping-and-Mosaicing/"><p>Image Warping and Mosaicing</p></a></figcaption>
                         </figure>
                     </div>
