updated for mobile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!--CONTENT-->
     <div class="content">
   
-        <div class="home">
+        <div class="home" id="mobile">
             <div class="home-text">
                 <div class="container">
                     <h1 class="light">Hello!</h1> 
@@ -73,8 +73,8 @@
             <center>
                 <h2>About Me</h2></center>
                 
-                <div class="container">
-                    <img src="assets/images/aboutme.png" width="350px">
+                <div class="container about">
+                    <img src="assets/images/aboutme.png" class="about-img" width="350px">
                     <div class="intro-text">
                         <div class="container">
                             <img src="assets/images/star-medium.png" alt="" width="40px">
