--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <br>
         <br>
         <br>
+        <br>
         <div id="title">
             <!--ABOUT ME: INTRODUCTION-->
             <center>
@@ -164,7 +165,7 @@
                         <p>Lightroom</p>
                         <img src="assets/images/four.png" alt="" width="100">
             
-                        <p>Premiere Pro</p>
+                        <p id="projects">Premiere Pro</p>
                         <img src="assets/images/three.png" alt="" width="100">
                     </div>
                 </div>
@@ -182,9 +183,9 @@
             <!--HIGHLIGHTED PROJECTS-->
             <!--CS194-26 PROJECTS 1-3-->
 
-            <h2 id="projects">Highlighted Projects</h2>
+            <h2>Highlighted Projects</h2>
 
-            <div class="projectflex">
+            <div class="project">
                 <div class="row" id="proj">
                     <div class="proj-column">
                         <figure>
@@ -209,13 +210,13 @@
                     <div class="proj-column">
                         <figure>
                             <a href="https://asieb18.github.io/keyboard"><img src="assets/images/keeb.png" alt="" width="300"></a>
-                            <figcaption><a href="https://asieb18.github.io/keyboard"><p>Mechanical Keyboard</p></a></figcaption>
+                            <figcaption><a href="https://asieb18.github.io/keyboard"><p>Mechanical Keyboard Site</p></a></figcaption>
                         </figure>
                     </div>
                     <div class="proj-column">
                         <figure>
-                            <a href="https://asieb18.github.io/"><img src="assets/images/game.png" alt="" width="300"></a>
-                            <figcaption><a href="https://asieb18.github.io/"><p>BYOW: Build Your Own World</p></a></figcaption>
+                            <a href="https://sp21.datastructur.es/materials/proj/proj3/proj3"><img src="assets/images/game.png" alt="" width="300"></a>
+                            <figcaption><a href="https://sp21.datastructur.es/materials/proj/proj3/proj3"><p>BYOW: Build Your Own World</p></a></figcaption>
                         </figure>
                     </div>
                 </div>
